feat(studio): support LLMNode and KnowledgeRetrievalNode for Studio DSL and enhance them for Dify DSL (#2336)
* refactor: use default upload-method (local-file)

* feat: support studio dsl LLMNode

* fix: fix studio LLM Node

* fix: fix dify LLM Node

* feat: init KnowledgeRetrievalNode for Studio DSL

* feat: add NodeSection.resourceFiles Method

* fix bugs

* feat: support generate KnowledgeRetrievalNode code with local Resources

* fix styles

* fix front end bugs

* fix bugs

* fix bugs